mfe-system-applications-mfe/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mfe-system-applications-mfe
  labels:
    app: mfe-system-applications-mfe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mfe-system-applications-mfe
  template:
    metadata:
      labels:
        app: mfe-system-applications-mfe
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: mfe-system-applications-mfe
          image: mfe-system-applications-mfe # configure a proper registry
          imagePullPolicy: Never # configure a proper registry
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          args: []
