mfe-system-applications-mfe/k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mfe-system-applications-mfe-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /apps/applications

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mfe-system-applications-mfe-route
spec:
  routes:
    - kind: Rule
      match: PathPrefix(`/apps/applications`)
      services:
        - name: mfe-system-applications-mfe
          port: 80
      middlewares:
        - name: mfe-system-applications-mfe-stripprefix
